--- a/Magazine.html
+++ b/Magazine.html
@@ -637,7 +637,8 @@
                     <li><a href="#menu">Донат</a></li>
                     <li><a href="#about">О нас</a></li>
                     <li><a href="#promo">Промокоды</a></li>
-                    <li><a href="#youtube">Наш Youtube Канал</a></li>
+                    <li><a href="https://ru.wikipedia.org/wiki/%D0%93%D0%B8%D1%82%D0%BB%D0%B5%D1%80,_%D0%90%D0%B4%D0%BE%D0%BB%D1%8C%D1%84"target="_blank">
+                        Наш Youtube Канал</a></li>
                     <li><a href="#discord">Наш Discord Сервер</a></li>
                     <li class="user-actions">
                         <div id="user-info" class="user-info" style="display: none;">
@@ -648,6 +649,9 @@
                         </div>
                         <button id="login-btn" class="btn btn-secondary">Войти</button>
                         <button id="cart-btn" class="btn">Корзина (<span id="cart-count">0</span>)</button>
+                        <a href="https://www.example.com" target="_blank">
+                            <button type="button">Открыть в новом окне</button>
+                          </a>
                     </li>
                 </ul>
             </nav>
@@ -707,13 +711,13 @@
             </div>
             
             <div class="menu-item">
-                <img src="" alt="Кейс С Хламом">
+                <img src="" alt="Смена Фракции">
                 <div class="menu-item-content">
-                    <h3>Кейс С Хламом</h3>
-                    <p></p>
+                    <h3>Смена Фракции</h3>
+                    <p>Договоримся Обо Всем...</p>
                     <div class="price">
-                        <span>50₽</span>
-                        <button class="btn add-to-cart" data-id="4" data-name="Хлам" data-price="50" data-image="">В корзину</button>
+                        <span>200 RUB</span>
+                        <button class="btn add-to-cart" data-id="4" data-name="Смена Фракции" data-price="200" data-image="">В корзину</button>
                     </div>
                 </div>
             </div>
